<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#AA7E5C" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/ivContacto"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/descripcion_contacto"
                android:onClick="guardarFoto"
                android:src="@drawable/ic_agenda_defecto" />

            <RelativeLayout
                android:id="@+id/RLImageView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center" >

                <ImageView
                    android:id="@+id/ivEliminar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/descripcion_borrar"
                    android:onClick="ivEliminar"
                    android:src="@android:drawable/ic_delete" />

                <ImageView
                    android:id="@+id/ivSms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="30dp"
                    android:layout_toLeftOf="@+id/ivEliminar"
                    android:contentDescription="@string/descripcion_sms"
                    android:onClick="ivSms"
                    android:src="@android:drawable/sym_action_email" />

                <ImageView
                    android:id="@+id/ivGmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/ivSms"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@+id/ivEliminar"
                    android:contentDescription="@string/descripcion_gmail"
                    android:onClick="ivGmail"
                    android:src="@drawable/gmail" />

                <ImageView
                    android:id="@+id/ivLlamar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ivSms"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/descripcion_llamar"
                    android:onClick="ivLlamar"
                    android:src="@android:drawable/sym_action_call" />
            </RelativeLayout>

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/hint_et_nombre"
                android:inputType="textPersonName"
                android:textColor="#FFFFFF"
                android:textColorHint="#DCDCDC"
                android:textCursorDrawable="@null" />

            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/hint_et_telefono"
                android:inputType="numberSigned"
                android:textColor="#FFFFFF"
                android:textColorHint="#DDDDDD"
                android:textCursorDrawable="@null" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/hint_et_email"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"
                android:textColorHint="#DDDDDD"
                android:textCursorDrawable="@null" />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom" >

        <Button
            android:id="@+id/btAnadir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/bt_anadir2"
        	android:background="@drawable/boton_anadir"
        	android:onClick="anadirOEditar" />

        <Button
            android:id="@+id/btCancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="10dp"
            android:text="@string/bt_cancelar"
        	android:background="@drawable/boton_anadir"
        	android:onClick="cancelar" />
    </LinearLayout>

</LinearLayout>